--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 	<head>
 		<title></title>
-
+		<link rel="stylesheet" type="text/css" href="style2.css">
 	</head>
 
 
 
 
 	<body>
-		<img src="IMG_0025.JPG" alt="NO PAIN NO GAIN">
-		<h1>Coming soon ... Le Wagon</h1>
+		<div id="container">
+		<img id="logo" src="IMG_0025.JPG" alt="NO PAIN NO GAIN">
+		<h1> Welcome to tattoo parlor</h1>
+		
+		</div>
 	</body>
 
 
